--- a/productlist/src/main/resources/application.properties
+++ b/productlist/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.application.name=productlist
+spring.application.name=product
+spring.datasource.url= jdbc:h2:mem:testDB;
+spring.jpa.show-sql=true
+
