--- a/productlist/src/main/resources/application.properties
+++ b/productlist/src/main/resources/application.properties
@@ -14,6 +14,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+spring.app.jwtSecret = MySecretKey
+spring.app.jwtExpiration = 3000000000
+
 
 
 
